--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "@angular/router": "^6.0.3",
     "@auth0/angular-jwt": "^2.1.0",
     "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.5",
+    "popper.js": "^1.14.6",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
+    "typescript": "2.7.2",
     "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "2.8.6",
+    "@types/jasminewd2": "2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
